--- a/src/app/view/manageagency/manageagency.component.html
+++ b/src/app/view/manageagency/manageagency.component.html
@@ -27,8 +27,8 @@
 
             <tr>
               <th style="text-align: center; width: 5%;">ลำดับ</th>
-              <th style="width: 10%;">ชื่อ</th>
-              <th style="width: 10%;">ที่ตั้งหน่วยงาน</th>
+              <th >ชื่อ</th>
+              <th >ที่ตั้งหน่วยงาน</th>
               <th style="width: 10%;">อีเมล</th>
               <th style="width: 10%;">เบอร์โทรศัพท์</th>
          
@@ -39,10 +39,17 @@
           <tbody>
             <tr *ngFor="let agency of agency ; let i = index">
               <td style="text-align: center; width: 5%;">{{ i + 1 }}</td>
-              <td> {{ agency.agency_name }} </td>
-              <td> {{ agency.address }} </td>
-              <td> {{ agency.email }} </td>
-              <td> {{ agency.phone }} </td>
+              <td> {{ agency?.agency_name }} </td>
+              <td> 
+                {{ agency?.address }} 
+                {{ getTambonName(agency?.tambon) }}  
+          
+                {{ getAmphureName(agency?.amphure) }} 
+                {{ getProvinceName(agency?.province) }}
+                {{agency?.postCode}}
+              </td>
+              <td> {{ agency?.email }} </td>
+              <td> {{ agency?.phone }} </td>
         
 
 
