--- a/src/app/signature/signature.component.css
+++ b/src/app/signature/signature.component.css
@@ -68,15 +68,7 @@ a:hover{
   cursor: pointer;
   color: #9c27b0 !important;
 }
-.BackPage{
-  display: flex;
-   /* justify-content: center;  */
-   align-items: center;
-   background: transparent;
-    border: none; 
-    color: rgb(137, 135, 135);
-  padding: 20px;
-}
+
 .signTool-content{
   display: flex;
   flex-direction: column;
@@ -100,7 +92,7 @@ a:hover{
 }
 :host ::ng-deep .uploadFilePDF{
   position: relative;
-  margin: 0 0 0 40px ;
+  margin: 0  ;
   border-radius: 5px;
   width: 360px;
   display: flex;
@@ -304,9 +296,10 @@ color: #89229b !important;
 display: flex;
  align-items: center;
  background: transparent;
+ width: 105px;
   border: none; 
   color: rgb(137, 135, 135);
-padding-left: 20px;
+padding: 20px 0 0 20px;
 }
 .BackPage:hover{
 color: black;
@@ -324,13 +317,13 @@ justify-content: center;
 margin-top: 15px;
 }
 
-:host ::ng-deep .pdfViewer.removePageBorders {
-border: 1px solid black; /* กำหนดขอบให้สม่ำเสมอทุกด้าน */
-box-sizing: border-box;  /* เพื่อให้ขอบและ padding รวมอยู่ในขนาดขององค์ประกอบ */
-width: 210mm; /* กำหนดความกว้างให้เท่ากับขนาดกระดาษ A4 */
-height: 297mm; /* กำหนดความสูงให้เท่ากับขนาดกระดาษ A4 */
-overflow: hidden; /* ป้องกันไม่ให้เนื้อหาล้นขอบ */
+/* :host ::ng-deep .pdfViewer.removePageBorders {
+border: 1px solid black; 
+box-sizing: border-box;  
+width: 210mm;
+height: 297mm; 
+overflow: hidden; 
 
 position: relative;
 left: 20%;
-}
+} */
