--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -98,21 +98,108 @@
                                             <div class="col-md-3">
                                                 <label for="">ชื่อหน่วยงาน</label>
                                             </div>
-                                            <div class="col-md-9"  *ngIf="EditStatus">
-                                                <input type="text" formControlName="organization" class="form-control">
-                                            </div>
-                                            <div class="col-md-9"  *ngIf="!EditStatus">
+                                           
+                                            <div class="col-md-9" style="display: flex;" >
                                                 {{UserData?.employeeId?.organization}}
+                                                <div class="DataOrganization" (click)="openorganizationModel()">
+                                                    รายละเอียด
+                                                </div>
+                                             
+                                                <div class="modal fade" id="organizationModel" tabindex="-1" role="dialog"
+                                                    aria-labelledby="addItemModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog" role="document">
+                                                        <div class="modal-content Organization-content " style="width: 800px; height: auto;" >
+                                                            <div class="modal-header" class="card-header">
+                                                                <h5 class="modal-title" id="addItemModalLabel"
+                                                                style="color: rgb(0, 0, 0); font-family: 'Sarabun', sans-serif !important; font-size: 18px; font-weight: 900;">
+                                                                ข้อมูลหน่วยงาน</h5>
+            
+                                                            <button type="button" class="close" data-dismiss="modal"
+                                                                aria-label="Close" style="color: black;">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div class="row">
+                                                                    <div class="col-md-3">
+                                                                        <label for="">
+                                                                            ชื่อหน่วยงาน :
+                                                                        </label>
+                                                                       
+                                                                    </div>
+                                                                    <div class="col-md-9">
+                                                                        {{DataOrganization?.agency_name}}
+                                                                    </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-md-3">
+                                                                        <label for=""> ที่อยู่ :</label>
+                                                                       
+                                                                    </div>
+                                                                    <div class="col-md-9">
+                                                                        {{DataOrganization?.address}}
+        
+                                                                    </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-md-3">
+                                                                        <label for=""></label>
+                                                                    </div>
+                                                                    <div class="col-md-5">
+                                                                        ตำบล/แขวง : {{getTambonName(DataOrganization?.tambon)}}
+                                                                    </div>
+                                                                    <div class="col-md-4">
+                                                                        อำเภอ/เขต : {{getAmphureName(DataOrganization?.amphure)}}
+                                                                    </div>
+                            
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-md-3">
+                                                                        <label for=""></label>
+                                                                    </div>
+                                                            
+                            
+                            
+                                                                    <div class="col-md-5">
+                                                                        จังหวัด : {{getProvinceName(DataOrganization?.province)}}
+                                                                    </div>
+                                                                    <div class="col-md-4">
+                                                                        รหัสไปรษณีย์ : {{DataOrganization?.postCode}}
+                                                                    </div>
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-md-3">
+                                                                    <label for=""> อิเมล :</label>
+                                                                    </div>
+                                                                    <div class="col-md-9">
+                                                                        {{DataOrganization?.email}}
+                                                                    </div>
+                                                                   
+                                                                </div>
+                                                                <div class="row">
+                                                                    <div class="col-md-3">
+                                                                    <label for="">      เบอร์โทรศัพท์ :</label>
+                                                                  
+                                                                    </div>
+                                                                    <div class="col-md-9">
+                                                                        {{DataOrganization?.phone}}
+                                                                    </div>
+        
+                                                                </div>
+                                                               
+                                                            </div>
+                                                            <!-- <div class="modal-footer"> </div> -->
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col-md-3">
                                                 <label for="">ที่อยู่</label>
                                             </div>
-                                            <div class="col-md-9"  *ngIf="EditStatus">
-                                                <input type="text" formControlName="address" class="form-control">
-                                            </div>
-                                            <div class="col-md-9"  *ngIf="!EditStatus">
+                                         
+                                            <div class="col-md-9"  >
                                                 {{UserData?.employeeId?.address}}
                                             </div>
                                             
@@ -121,35 +208,8 @@
                                             <div class="col-md-3">
                                                 <label for=""></label>
                                             </div>
-                                            <div class="col-md-5 select-wrapper"  *ngIf="EditStatus">
-                                                ตำบล/แขวง :
-                                                <select class="form-select" formControlName="tambon"
-                                                 (focus)="istAmbonSelectOpen = true" 
-                                                 (blur)="istAmbonSelectOpen = false" 
-                                                 (change)="onTambonChange($event.target.value)"
-                                                 [attr.disabled]="isTambonDisabled ? true : null">
-                                                <option *ngFor="let tambon of tambons" [value]="tambon.id">{{ tambon.name_th }}</option>
-                                              </select>
-                                                <div class="iconSelect" [class.rotate]="istAmbonSelectOpen">
-                                                    <i class="fa fa-chevron-down"></i>
-                                                </div>
-                                                <!-- <input type="text"formControlName="tambon" class="form-control" placeholder="ตำบล"> -->
-                                            </div>
-                                            <div class="col-md-4 select-wrapper"  *ngIf="EditStatus">
-                                                อำเภอ/เขต :
-                                                <select class="form-select" formControlName="amphure" 
-                                                (focus)="isAmphureSelectOpen = true" 
-                                                 (blur)="isAmphureSelectOpen = false" 
-                                                (change)="onAmphuresChange($event.target.value)"
-                                                [attr.disabled]="isAmphureDisabled ? true : null">
-                                                <option *ngFor="let amphure of amphures" [value]="amphure.id">{{ amphure.name_th}}</option>
-                                              </select>
-
-                                              <div class="iconSelect" [class.rotate]="isAmphureSelectOpen">
-                                                <i class="fa fa-chevron-down"></i>
-                                                </div>
-                                                <!-- <input type="text"formControlName="amphure" class="form-control" placeholder="อำเภอ"> -->
-                                            </div>
+                                           
+                                          
                                             <div class="col-md-5"  *ngIf="!EditStatus">
                                                ตำบล/แขวง : {{getTambonName(UserData?.employeeId?.tambon)}}
                                             </div>
@@ -163,30 +223,13 @@
                                                 <label for=""></label>
                                             </div>
                                     
-                                            <div class="col-md-5 select-wrapper" *ngIf="EditStatus">
-                                                จังหวัด : 
-                                                <select class="form-select" formControlName="province"
-                                                (focus)="isProvinceSelectOpen = true" 
-                                                (blur)="isProvinceSelectOpen = false" 
-                                                (change)="onProvinceChange($event.target.value)">
-                                                <option *ngFor="let province of provinces" [value]="province.id">{{ province.name_th }}</option>
-                                              </select>
-                                              
-                                              <div class="iconSelect" [class.rotate]="isProvinceSelectOpen">
-                                                <i class="fa fa-chevron-down"></i>
-                                                </div>
-                                                <!-- <input type="text" formControlName="province" class="form-control" placeholder="จังหวัด"> -->
-                                            </div>
+                                        
                                       
-                                            <div class="col-md-4 "  *ngIf="EditStatus">
-                                                รหัสไปรษณีย์ : 
-                                                <div class="form-control">{{ UserInfoForm.controls['postCode'].value }}</div>
-                                                <!-- <input type="text"formControlName="postCode"  class="form-control"  placeholder="รหัสไปรษณีย์"> -->
-                                            </div>
+                                    
                                             <div class="col-md-5"  *ngIf="!EditStatus">
                                                จังหวัด :  {{getProvinceName(UserData?.employeeId?.province)}}
                                             </div>
-                                            <div class="col-md-4"  *ngIf="!EditStatus">
+                                            <div class="col-md-4"  >
                                               รหัสไปรษณีย์ :  {{UserData?.employeeId?.postCode}}
                                             </div>
                                         </div>
