06//09 14:47 หยิบย่อย thaidate การจัด center ของตารางใน tag th tr

--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -515,7 +515,7 @@
 
                             </div>
                         </div>
-                        <div class="modal-footer"> 
+                        <div class="modal-footer" style="padding-bottom: 0;"> 
                             <button type="submit" class="btn btn-success">ยืนยัน</button>
                             <button type="button" class="btn btn-danger" (click)="closeModal()">ยกเลิก</button>
                         </div>
