--- a/src/app/view/table-main/data-detail/data-detail.component.css
+++ b/src/app/view/table-main/data-detail/data-detail.component.css
@@ -1,7 +1,13 @@
 .card{
     padding: 30px;
 }
-
+.card-body{
+  font-size: 16px;
+}
+label{
+  font-size: 16px;
+  font-weight: 500;
+}
 
 .card-title p{
     font-family: "Sarabun", sans-serif; 
