--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -143,7 +143,7 @@
 
                         </div>
                       </div>
-                      <div class="col-sm-4">
+                      <div class="col-sm-5">
                         <div class="form-group">
                           <label for="startDate">วันที่เริ่มตรวจสอบ
                             <span
@@ -162,7 +162,7 @@
                           <!--style="color:rgb(171, 171, 171)"-->
                         </div>
                       </div>
-                      <div class="col-sm-6">
+                      <div class="col-sm-5">
                         <div class="form-group">
                           <label for="endDate">วันที่เสร็จสิ้น
                             <span
@@ -362,7 +362,7 @@
 
 
                     <div class="modal-footer" style="padding-bottom: 0;">
-                      <button type="submit" class="btn btn-success" ><i class="fa fa-check"></i>&nbsp;ยืนยัน</button>
+                      <button type="submit" class="btn btn-success" ><i class="fa fa-check"></i>&nbsp; ยืนยัน</button>
                       <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"
                           (click)="closeModal()"></i>
                         &nbsp; ปิด
@@ -385,7 +385,7 @@
             aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content card" [ngStyle]="{width: '230mm',padding:'10px'  }">
-                <div class="card-header " style="border-bottom: 1px solid #868686 ; border-radius: 10px 10px 0 0;">
+                <div class="card-header " style="border-bottom: 1px solid #ccc; border-radius: 10px 10px 0 0;">
                   <div  class="modal-title card-title" id="myModalLabel">
                     <p  style="margin: 0;">จดบันทึก</p>
                     <!-- <div class="sub-title">
