--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .dashboard {
   margin-top: 50px;
-  padding:40px 15px 0;
+  padding:40px 15px ;
   display: flex;
   flex-wrap: wrap;
   min-height: calc(100vh - 123px);
