--- a/src/app/view/manageperson/manageperson.component.html
+++ b/src/app/view/manageperson/manageperson.component.html
@@ -29,7 +29,7 @@
                   <th style="color: black; font-size: 16px;">อีเมล</th>
 
             
-                  <th class="text-center" style="color: black; font-size: 16px;"><i class="fa fa-gear"></i></th>
+                  <!-- <th class="text-center" style="color: black; font-size: 16px;"><i class="fa fa-gear"></i></th> -->
                 </tr>
               </thead>
               <tbody>
@@ -52,13 +52,13 @@
       
              
              
-                  <td class="text-center" style="width:1% ;white-space: nowrap;">
+                  <!-- <td class="text-center" style="width:1% ;white-space: nowrap;">
                     <button (click)="openDataDetail(person?._id)" style="border: none; background: none; color: black;">
                       <i data-toggle="tooltip" title="ดูรายละเอียดเอกสาร" data-placement="top"
                         class="fa fa-pencil"></i>
                     </button>
                    
-                  </td>
+                  </td> -->
                 </tr>
               </tbody>
             </table>
