--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -25,8 +25,8 @@
               <th class="small-name">หัวข้อการสร้าง</th>
               <th class="small-name" style=" width: 10%;">ชื่อ</th>
               <th class="small-name" style=" width: 10%;">นามสกุล</th>
-              <th class="small-name">วันที่สร้าง</th>
-              <th class="small-name">เวลาที่สร้าง</th>
+              <th class="small-name" style=" width: 10%; vertical-align: middle; white-space: nowrap; text-align: center;">วันที่สร้าง</th>
+              <th class="small-name" style=" width: 10%; vertical-align: middle; white-space: nowrap; text-align: center;">เวลาที่สร้าง</th>
               <!-- <th class="small-cell">ตำเเหน่ง</th> -->
               <!-- <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
                   class="fa fa-gear"></i></th> -->
@@ -38,8 +38,8 @@
               <td class="small-name"> {{ userDocument.record_topic }} </td>
               <td class="small-name"> {{ userDocument.firstname }} </td>
               <td class="small-name"> {{ userDocument.lastname }} </td>
-              <td class="small-name"> {{ userDocument.createdDate }} </td>
-              <td class="small-name"> {{ userDocument.createdTime }} </td>
+              <td class="small-name" style="vertical-align: middle; white-space: nowrap; text-align: center;"> {{ userDocument.createdDate | thaidate: 'thaiDate' }} </td>
+              <td class="small-name" style="vertical-align: middle; white-space: nowrap; text-align: center;"> {{ userDocument.createdTime }} </td>
               <!-- <td class="small-cell"> {{ users.role }} </td> -->
               <!-- <td class="small-cell-text">
               <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
