--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,19 +11,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
              <!-- Notification Dropdown -->
       <div class="dropdown">
-        <a class="nav-link dropdown-toggle" 
+        <!-- <a class="nav-link dropdown-toggle" 
            id="notificationDropdown" 
            href="#" 
            role="button" 
            aria-haspopup="true" 
            aria-expanded="false"
-           (click)="toggleNotificationDropdown($event)"> <!-- Separate method for notifications -->
+           (click)="toggleNotificationDropdown($event)"> 
           <i class="material-icons">notifications</i>
           <span class="notification-edit">{{ unreadNotifications.length }}</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" 
+        </a> -->
+        <!-- <div class="dropdown-menu dropdown-menu-right" 
              aria-labelledby="notificationDropdown"
-             [class.show]="notificationDropdownOpen"> <!-- Use a separate state for notifications -->
+             [class.show]="notificationDropdownOpen">
           <h6 class="dropdown-header">Notifications</h6>
           <ng-container *ngIf="unreadNotifications.length > 0; else noNotifications">
             <a *ngFor="let notification of unreadNotifications" class="dropdown-item" href="#">
@@ -45,7 +45,7 @@
           <ng-template #noNotifications>
             <span class="dropdown-item text-muted">No new notifications</span>
           </ng-template>
-        </div>
+        </div> -->
       </div>
 
 
