--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -22,6 +22,9 @@
       <button type="button" (click)="BackRoot()" class="BackPage">
         <i class="fa fa-arrow-left"> &nbsp; ย้อนกลับ</i>
       </button>
+      <button type="button" (click)="saveRCPDF()" class="BackPage">
+        <i> &nbsp; บันทึกPDF</i>
+      </button>
 
       <div class="card-body">
         <div class="signTool-content" *ngIf="loading">
