--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -168,7 +168,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <p class="title mb-0">จำนวนกระดาษ</p>
-                  <h2 class="amount">{{ totalSignedDocuments }}</h2> 
+                  <h2 class="amount">{{ totalSignedDocumentsCount }}</h2> 
                   </div>
                   <div class="imgBG">
                     <img src="./assets/img/paper.png" alt="paper" class="paper-img">
