11//09 add new component and fixed some dashboard and side nav

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -55,7 +55,7 @@
           <img [src]="profileImgUrl" alt="img not found" style="border-radius: 15px; border: 1px solid black; height: 32px; width: 32px;">
         </a>
         <div class="dropdown-menu dropdown-menu-right" [class.show]="profileDropdownOpen"> <!-- Separate state for profile -->
-          <a class="nav-link" (click)="openProfile()"><i class="fa fa-user"></i> &nbsp;จัดการผู้ใช้</a>
+          <a class="nav-link" (click)="openProfile()"><i class="fa fa-user"></i> &nbsp;ข้อมูลผู้ใช้งาน</a>
           <!-- <a class="nav-link" aria-disabled="true"><i class="fa fa-gear"></i> &nbsp; ตั้งค่า</a> -->
           <a class="nav-link" (click)="openLogin()"><i class="fa fa-sign-out"></i> &nbsp;ออกจากระบบ</a>
         </div>
