--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -84,19 +84,19 @@
                             <div class="card-info">
                                 <div class="row">
                                     <label for=""> ระดับผู้ใช้งาน : </label>
-                                    <a href=""> &nbsp; {{UserData?.role}}</a>
+                                    <p > &nbsp; {{UserData?.role}}</p>
 
 
                                 </div>
                                 <div class="row">
                                     <label for=""> ชื่อ-นามสกุล :</label>
-                                    <a href=""> &nbsp; {{ UserData?.employeeId?.firstname }} &nbsp;
-                                        {{UserData?.employeeId?.lastname}} </a>
+                                    <p > &nbsp; {{ UserData?.employeeId?.firstname }} &nbsp;
+                                        {{UserData?.employeeId?.lastname}} </p>
 
                                 </div>
                                 <div class="row">
                                     <label for=""> ตำแหน่ง : </label>
-                                    <a href=""> &nbsp; {{UserData?.employeeId?.bearing}}</a>
+                                    <p > &nbsp; {{UserData?.employeeId?.bearing}}</p>
 
                                 </div>
 
