--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,278 +1,251 @@
 <!-- <div *ngIf="isSuperAdmin"> -->
 <div class="dashboard">
-
- 
-
   <div class="container-fluid">
-
-
     <div class="BoxTotal">
-
       <div class="row">
         <div class="col-md-6">
-        
-            <div class="row filter-container">
-              <div class="col-md-3 filter-item">
-                <h4>กรองข้อมูล</h4>
-                <div class="dropdown">
-                  <div class="filter-box" style="font-size: 14px;" (click)="toggleDropdown('province',$event)">
-                    เลือกจังหวัด
-                    <span class="fa fa-chevron-down" [class.animate]="isProvinceDropdownOpen"
-                      *ngIf="isProvinceDropdownOpen"></span>
-                    <span class="fa fa-chevron-up" [class.animate]="!isProvinceDropdownOpen"
-                      *ngIf="!isProvinceDropdownOpen"></span>
+          <div class="row filter-container">
+            <div class="col-md-3 filter-item">
+              <h4>กรองข้อมูล</h4>
+              <div class="dropdown">
+                <div class="filter-box" style="font-size: 14px;" (click)="toggleDropdown('province',$event)">
+                  เลือกจังหวัด
+                  <span class="fa fa-chevron-down" [class.animate]="isProvinceDropdownOpen"
+                    *ngIf="isProvinceDropdownOpen"></span>
+                  <span class="fa fa-chevron-up" [class.animate]="!isProvinceDropdownOpen"
+                    *ngIf="!isProvinceDropdownOpen"></span>
+                </div>
+
+                <div class="dropdown-content" [class.show]="isProvinceDropdownOpen">
+                  <div class="search">
+                    <input class="form-control form-control-sm inputSearch" type="text" placeholder="ค้นหา..."
+                      (input)="onSearch($event)">
                   </div>
-      
-                  <div class="dropdown-content" [class.show]="isProvinceDropdownOpen">
-                    <div class="search">
-                      <input class="form-control form-control-sm inputSearch" type="text" placeholder="ค้นหา..."
-                        (input)="onSearch($event)">
+                  <div class="dropdown-scroller">
+                    <div class="dropdown-item">
+                      <input type="checkbox" id="select-all" (change)="onSelectAll($event)">
+                      &nbsp;<label for="select-all">ทั้งหมด</label>
                     </div>
-                    <div class="dropdown-scroller">
-                      <div class="dropdown-item">
-                        <input type="checkbox" id="select-all" (change)="onSelectAll($event)">
-                        &nbsp;<label for="select-all">ทั้งหมด</label>
-                      </div>
-                      <div class="dropdown-item" *ngFor="let province of filteredProvinces">
-                        <input type="checkbox" [id]="province.id" [value]="province.id"
-                          (change)="onProvinceSelect($event)" [checked]="province.selected">
-                        &nbsp;<label [for]="province.id">{{ province.name_th }}</label>
-                      </div>
-                    </div>
-      
-      
-                    <div class="button-inline">
-                      <button class="apply-filter" (click)="applyFilter()">ยืนยัน</button>
-                      <button class="clear-filter" (click)=" clearFilter()">ล้าง</button>
+                    <div class="dropdown-item" *ngFor="let province of filteredProvinces">
+                      <input type="checkbox" [id]="province.id" [value]="province.id"
+                        (change)="onProvinceSelect($event)" [checked]="province.selected">
+                      &nbsp;<label [for]="province.id">{{ province.name_th }}</label>
                     </div>
                   </div>
+
+
+                  <div class="button-inline">
+                    <button class="apply-filter" (click)="applyFilter()">ยืนยัน</button>
+                    <button class="clear-filter" (click)=" clearFilter()">ล้าง</button>
+                  </div>
                 </div>
-              </div>
-      
-              <div class="col-md-3 filter-item">
-                <h4>เริ่มต้นวันที่</h4>
-                <div class="filter-box" (click)="toggleDropdown('date',$event)">
-                  <input type="date" [(ngModel)]="startDate" (change)="onDateChange()" placeholder="เริ่มต้นวันที่">
-                </div>
-              </div>
-              
-              <div class="col-md-3 filter-item">
-                <h4>สิ้นสุด</h4>
-                <div class="filter-box">
-                  <input type="date" [(ngModel)]="endDate">
-                </div>
-              </div>
-      
-              <div class="col-md-3 align-self-end filter-item" style="max-width: 18%;">
-                <button type="submit" class="btn btn-add ">
-                  ดูข้อมูล
-                </button>
               </div>
             </div>
-     
-    
+
+            <div class="col-md-3 filter-item">
+              <h4>เริ่มต้นวันที่</h4>
+              <div class="filter-box" (click)="toggleDropdown('date',$event)">
+                <input type="date" [(ngModel)]="startDate" (change)="onDateChange()" placeholder="เริ่มต้นวันที่">
+              </div>
+            </div>
+
+            <div class="col-md-3 filter-item">
+              <h4>สิ้นสุด</h4>
+              <div class="filter-box">
+                <input type="date" [(ngModel)]="endDate">
+              </div>
+            </div>
+
+            <div class="col-md-3 align-self-end filter-item" style="max-width: 18%;">
+              <button type="submit" class="btn btn-add ">
+                ดูข้อมูล
+              </button>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6" >
-            <div class="donutChartBG">
-                <div class="text-donut">จำนวนการลงนาม</div>
-                <div class="chart-container">
-                  <canvas id="myDonutChart" ></canvas>
-                </div>
-               
+        <div class="col-md-6">
+          <div class="donutChartBG">
+            <div class="text-donut">จำนวนการลงนาม</div>
+            <div class="chart-container">
+              <canvas id="myDonutChart"></canvas>
             </div>
+          </div>
         </div>
       </div>
+      <div class="row">
+        <!-- เอกสารทั้งหมด -->
+        <div class="col-md-3" *ngIf="isAdmin">
+          <div class="card Box1">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">เอกสารทั้งหมด</p>
+                  <h2 class="amount">{{ totalDocumentsCount }}</h2>
+                </div>
+                <div class="imgBG">
+                  <img src="./assets/img/manage.png" alt="paper" class="paper-img">
+                </div>
 
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3" *ngIf="isSuperAdmin">
+          <div class="card Box1">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">เอกสารทั้งหมด</p>
+                  <h2 class="amount">{{ totalDocuments }}</h2> <!--recordCount-->
+                </div>
+                <div class="imgBG">
+                  <img src="./assets/img/manage.png" alt="paper" class="paper-img">
+                </div>
 
-
-        <div class="row"  >
-          <!-- เอกสารทั้งหมด -->
-          <div class="col-md-3"*ngIf="isAdmin">
-            <div class="card Box1">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">เอกสารทั้งหมด</p>
-                    <h2 class="amount">{{ totalDocumentsCount }}</h2> 
-                  </div>
-                  <div class="imgBG">
-                    <img src="./assets/img/manage.png" alt="paper" class="paper-img">
-                  </div>
-
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- เอกสารที่ถูกเซ็น -->
+        <div class="col-md-3" *ngIf="isAdmin">
+          <div class="card Box2">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">เอกสารที่ถูกเซ็น</p>
+                  <h2 class="amount">{{ totalSignedDocumentsCount }}</h2>
+                </div>
+                <div class="imgBG" style="padding-left: 12px;">
+                  <img src="./assets/img/contract.png" alt="paper" class="paper-img">
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="col-md-3"  *ngIf="isSuperAdmin" >
-            <div class="card Box1">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">เอกสารทั้งหมด</p>
-                    <h2 class="amount">{{ totalDocuments }}</h2> <!--recordCount-->
-                  </div>
-                  <div class="imgBG">
-                    <img src="./assets/img/manage.png" alt="paper" class="paper-img">
-                  </div>
-
+        </div>
+        <div class="col-md-3" *ngIf="isSuperAdmin">
+          <div class="card Box2">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">เอกสารที่ถูกเซ็น</p>
+                  <h2 class="amount">{{ totalSignedDocuments }}</h2>
+                  <!-- <h2 class="amount">{{ totalPdfPages }}</h2>  -->
                 </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- เอกสารที่ถูกเซ็น -->
-          <div class="col-md-3" *ngIf="isAdmin" >
-            <div class="card Box2">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">เอกสารที่ถูกเซ็น</p>
-                    <h2 class="amount">{{ totalSignedDocumentsCount }}</h2>
-                  </div>
-                  <div class="imgBG" style="padding-left: 12px;">
-                    <img src="./assets/img/contract.png" alt="paper" class="paper-img">
-                  </div>
-
+                <div class="imgBG" style="padding-left: 12px;">
+                  <img src="./assets/img/contract.png" alt="paper" class="paper-img">
                 </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3"  *ngIf="isSuperAdmin" >
-            <div class="card Box2">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">เอกสารที่ถูกเซ็น</p>
-                    <h2 class="amount">{{ totalSignedDocuments }}</h2> 
-                     
-                    <!-- <h2 class="amount">{{ totalPdfPages }}</h2>  -->
-                  </div>
-                  <div class="imgBG" style="padding-left: 12px;">
-                    <img src="./assets/img/contract.png" alt="paper" class="paper-img">
-                  </div>
-
-                  <!-- <canvas id="signedDocumentsChart">
-
+                <!-- <canvas id="signedDocumentsChart">
                  </canvas> -->
-                </div>
               </div>
             </div>
           </div>
+        </div>
+        <!-- จำนวนกระดาษ -->
+        <div class="col-md-3" *ngIf="isAdmin">
+          <div class="card Box3">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">จำนวนกระดาษ</p>
+                  <h2 class="amount">{{ totalSignedDocuments }}</h2>
+                </div>
+                <div class="imgBG">
+                  <img src="./assets/img/paper.png" alt="paper" class="paper-img">
+                </div>
 
-          <!-- จำนวนกระดาษ -->
-          <div class="col-md-3" *ngIf="isAdmin">
-            <div class="card Box3">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">จำนวนกระดาษ</p>
-                  <h2 class="amount">{{ totalSignedDocuments }}</h2> 
-                  </div>
-                  <div class="imgBG">
-                    <img src="./assets/img/paper.png" alt="paper" class="paper-img">
-                  </div>
-
-                </div>
               </div>
             </div>
           </div>
-          
-          <div class="col-md-3"  *ngIf="isSuperAdmin" >
-            <div class="card Box3">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">จำนวนบริษัท</p>
-                  <h2 class="amount">{{ totalCompanies }}</h2> 
-                  </div>
-                  <div class="imgBG">
-                    <img src="./assets/img/paper.png" alt="paper" class="paper-img">
-                  </div>
-
+        </div>
+        <div class="col-md-3" *ngIf="isSuperAdmin">
+          <div class="card Box3">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">จำนวนหน่วยงาน</p>
+                  <h2 class="amount">{{ totalCompanies }}</h2>
                 </div>
-              </div>
-            </div>
-          </div>
-          <!-- จำนวนผู้ใช้งาน -->
-          <div class="col-md-3" *ngIf="isAdmin">
-            <div class="card Box4">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">จำนวนผู้ใช้งาน</p>
-                    <h2 class="amount">{{ userCount2 }}</h2>
-                  </div>
-                  <div class="imgBG">
-                    <img src="./assets/img/group.png" alt="paper" class="paper-img">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3"  *ngIf="isSuperAdmin">
-            <div class="card Box4">
-              <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="title mb-0">จำนวนผู้ใช้งาน</p>
-                    <h2 class="amount">{{ userCount }}</h2>
-                  </div>
-                  <div class="imgBG">
-                    <img src="./assets/img/group.png" alt="paper" class="paper-img">
-                  </div>
+                <div class="imgBG">
+                  <img src="./assets/img/office-building.png" alt="paper" class="paper-img"
+                    style="position: relative; left: 2px;">
                 </div>
               </div>
             </div>
           </div>
         </div>
-
-      
-
-
- 
-        <div class="row">
-          <div class="col-sm-8">
-        
-            <div class="BGchart">
-              <h4 *ngIf="isSuperAdmin">เอกสารที่ลงนาม & เอกสารที่ยังไม่ลงนาม</h4>
-              <h4 *ngIf="isAdmin">สรุปเอกสารรายเดือน</h4>
-              
-              <!-- Canvas สำหรับ SuperAdmin -->
-              <canvas *ngIf="isSuperAdmin" id="myLineChart"></canvas>
-              
-              <!-- Canvas สำหรับ Admin -->
-              <canvas *ngIf="isAdmin" id="myMonthlyChart"></canvas>
-        
-              <!-- Pagination สำหรับ SuperAdmin -->
-              <div class="pagination-chart" *ngIf="isSuperAdmin">
-                <button (click)="prevPage()"
-                  [disabled]="currentPage === 1 || (displayedProvinces.length < itemsPerPage && totalPages === 1)">
-                  <i class="fa fa-angles-left"></i>
-                </button>
-                <button (click)="nextPage()"
-                  [disabled]="currentPage === totalPages|| (displayedProvinces.length < itemsPerPage && totalPages === 1)">
-                  <i class="fa fa-angles-right"></i>
-                </button>
-              </div> <!-- ปิด div นี้อย่างถูกต้อง -->
-              
-            </div> <!-- ปิด div class="BGchart" อย่างถูกต้อง -->
-        
-          </div> <!-- ปิด div class="col-sm-8" อย่างถูกต้อง -->
-  
-        
-
-          <div class="col-sm-4" >
-            <app-map></app-map>
+        <!-- จำนวนผู้ใช้งาน -->
+        <div class="col-md-3" *ngIf="isAdmin">
+          <div class="card Box4">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">จำนวนผู้ใช้งาน</p>
+                  <h2 class="amount">{{ userCount2 }}</h2>
+                </div>
+                <div class="imgBG">
+                  <img src="./assets/img/group.png" alt="paper" class="paper-img">
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-12"  *ngIf="isSuperAdmin"> <!-- *ngIf="isSuperAdmin"-->
-            <app-thaicounty [filterCriteria]="filterCriteria"></app-thaicounty>
+        <div class="col-md-3" *ngIf="isSuperAdmin">
+          <div class="card Box4">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="title mb-0">จำนวนผู้ใช้งาน</p>
+                  <h2 class="amount">{{ userCount }}</h2>
+                </div>
+                <div class="imgBG">
+                  <img src="./assets/img/group.png" alt="paper" class="paper-img">
+                </div>
+              </div>
+            </div>
           </div>
-
         </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+
+          <div class="BGchart">
+            <h4 *ngIf="isSuperAdmin">เอกสารที่ลงนาม & เอกสารที่ยังไม่ลงนาม</h4>
+            <h4 *ngIf="isAdmin">สรุปเอกสารรายเดือน</h4>
+
+            <!-- Canvas สำหรับ SuperAdmin -->
+            <canvas *ngIf="isSuperAdmin" id="myLineChart"></canvas>
+
+            <!-- Canvas สำหรับ Admin -->
+            <canvas *ngIf="isAdmin" id="myMonthlyChart"></canvas>
+
+            <!-- Pagination สำหรับ SuperAdmin -->
+            <div class="pagination-chart" *ngIf="isSuperAdmin">
+              <button (click)="prevPage()"
+                [disabled]="currentPage === 1 || (displayedProvinces.length < itemsPerPage && totalPages === 1)">
+                <i class="fa fa-angles-left"></i>
+              </button>
+              <button (click)="nextPage()"
+                [disabled]="currentPage === totalPages|| (displayedProvinces.length < itemsPerPage && totalPages === 1)">
+                <i class="fa fa-angles-right"></i>
+              </button>
+            </div> <!-- ปิด div นี้อย่างถูกต้อง -->
+
+          </div> <!-- ปิด div class="BGchart" อย่างถูกต้อง -->
+
+        </div> <!-- ปิด div class="col-sm-8" อย่างถูกต้อง -->
+
+
+
+        <div class="col-sm-4">
+          <app-map></app-map>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12" *ngIf="isSuperAdmin"> <!-- *ngIf="isSuperAdmin"-->
+          <app-thaicounty [filterCriteria]="filterCriteria"></app-thaicounty>
+        </div>
+
+      </div>
 
 
 
