--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -67,6 +67,11 @@
                   <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                     class="fa fa-file-text-o ModalIcon "></i>
                 </button>
+                <button (click)="openAgencyMember(users.id)"
+                style="border: none; background: none; color: black; text-align: center;">
+                <i data-toggle="tooltip" title="ดูรายชื่อบุคคลกร" data-placement="top"
+                  class="fa fa-building-o "></i>
+              </button>
               </td>
             </tr>
           </tbody>
